k8s/nginx-ingress/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "jellyfin.minikube.home.lab"
    - "test.minikube.home.lab"
    - "startup.minikube.home.lab"
    secretName: lab-nginx-certificate
  - hosts:
    - "test.aramismatos1.com"
    - "jellyfin.aramismatos1.com"
    secretName: nginx-certificate-secret
  rules:
  - host: "jellyfin.minikube.home.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-service
            port:
              number: 8096
  - host: "startup.minikube.home.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: startup-service
            port:
              number: 3001
  - host: "jellyfin.aramismatos1.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-service
            port:
              number: 8096
  - host: "test.aramismatos1.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-service
            port: 
              number: 8080
